--- a/index.html
+++ b/index.html
@@ -13,39 +13,39 @@
             <h1>My gallery</h1>
             <div class="gallery">
             <figure class="image">
-                <img  src="/imagegallery/images/image1.jpg">
+                <img  src="/images/image1.jpg">
                 <figcaption>Image 1</figcaption>
             </figure>
             <figure class="image">
-                <img  src="/imagegallery/images/image2.jpeg">
+                <img  src="/images/image2.jpeg">
                 <figcaption>Image 2</figcaption>
             </figure>
             <figure class="image">
-                <img  src="/imagegallery/images/image3.jpeg">
+                <img  src="/images/image3.jpeg">
                 <figcaption>Image 3</figcaption>
             </figure>
             <figure class="image">
-                <img  src="/imagegallery/images/image4.jpeg">
+                <img  src="/images/image4.jpeg">
                 <figcaption>Image 4</figcaption>
             </figure>
             <figure class="image">
-                <img  src="/imagegallery/images/image5.jpeg">
+                <img  src="/images/image5.jpeg">
                 <figcaption>Image 5</figcaption>
             </figure>
             <figure class="image">
-                <img  src="/imagegallery/images/image6.jpeg">
+                <img  src="/images/image6.jpeg">
                 <figcaption>Image 6</figcaption>
             </figure>
             <figure class="image">
-                <img  src="/imagegallery/images/image7.jpeg">
+                <img  src="/images/image7.jpeg">
                 <figcaption>Image 7</figcaption>
             </figure>
             <figure class="image">
-                <img  src="/imagegallery/images/image8.jpeg">
+                <img  src="/images/image8.jpeg">
                 <figcaption>Image 8</figcaption>
             </figure>
             <figure class="image">
-                <img  src="/imagegallery/images/image9.jpeg">
+                <img  src="/images/image9.jpeg">
                 <figcaption>Image 9</figcaption>
             </figure>
         </div>
