--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1>My gallery</h1>
             <div class="gallery">
             <figure class="image">
-                <img  src="/images/image1.jpg">
+                <img  src="images/image1.jpg">
                 <figcaption>Image 1</figcaption>
             </figure>
             <figure class="image">
